--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cordova-android": "^8.1.0",
     "cordova-plugin-android-permissions": "^1.0.2",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-ionic": "^5.4.7",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
@@ -87,7 +88,15 @@
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-android-permissions": {}
+      "cordova-plugin-android-permissions": {},
+      "cordova-plugin-ionic": {
+        "APP_ID": "--app-id=\"5e2f83ce\" \\",
+        "CHANNEL_NAME": "\"Master\"",
+        "UPDATE_METHOD": "background",
+        "MAX_STORE": "2",
+        "MIN_BACKGROUND_DURATION": "30",
+        "UPDATE_API": "https://api.ionicjs.com"
+      }
     },
     "platforms": [
       "android"
